-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.2.0
-
-
560b95b77ac18edd0954a9b8ce9b92a828b51176 in qtdeclarative; 654a9df4be1b2a906ad3f2be6b5c7f6589912c54 in qtbase
Qt for iOS supports native windows, so the dialogs use them. But it doesn't look good because the window position is not managed properly, and is also undecorated because there is no window manager. Using decorated Items within the same scene will look better.
- is required for
-
QTBUG-35562 Issues to be fixed in Qt 5.2.1
-
- Closed
-
For Gerrit Dashboard: QTBUG-35561 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
73758,3 | QtQuick Dialogs: don't use native windows on iOS | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
75490,1 | QtQuick Dialogs: don't use native windows on iOS | dev | qt/qtquickcontrols | Status: MERGED | +2 | 0 |