QtQuick Dialogs: don't use native windows on iOS

It makes more sense to show the dialogs as items in the scene
rather than as undecorated windows.

Task-number: QTBUG-35561
Change-Id: I2fb29ed8eeb999b99829a9d5ffc088f401d5d602
Reviewed-by: Liang Qi <liang.qi@digia.com>